【修改】学习缓存抽象，web基本

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,7 @@ pagehelper.support-methods-arguments=true
 mybatis-plus.type-handlers-package=learning.spring.binarytea.support.handler
 mybatis-plus.type-aliases-package=learning.spring.binarytea.model.plus
 mybatis-plus.configuration.map-underscore-to-camel-case=true
+
+spring.cache.caffeine.spec=initialCapacity=10,maximumSize=50,expireAfterAccess=60s
+
+spring.cache.redis.time-to-live=60s
